--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 <!-- HOME --> 
 <section id="home" class="hero"> 
   <div class="my">
-  <h2>Hello It's Me</h2>
+  <h2>Hello Iam </h2>
   <h1>Rajarajeshwari</h1>
   <button class="badge">Software Developer Trainee</button>
-  <p>And I'm a Full Stack Developer and UI/UX Designer, <br>
-    currently training as a Software Developer at<br> Fresh Work Software Academy
+  <p> I'm a Full Stack Developer and UI/UX Designer, <br>
+    currently training as a Software Developer at<br> Freshworks STS Software Academy
     I enjoy building complete web applications from design to backend.
   </p>
   <button class="bio"> <a href="#about">About me ✨</a>
@@ -72,10 +72,10 @@
   <!-- Hobbies Section (Bottom) -->
    <h2 style="text-align:center; margin-top:70px;">Hobbies</h2>
   <div class="hobbies-container">
-    <div class="hobby-card">
+    <!-- <div class="hobby-card">
       <img src="https://cdn-icons-png.flaticon.com/512/6062/6062646.png">
       <h3>Coding</h3>
-    </div>
+    </div> -->
 
 <div class="hobby-card">
   <img src="https://cdn-icons-png.flaticon.com/512/2970/2970785.png" alt="Pencil Art">
@@ -92,15 +92,15 @@
   <h3>Music</h3>
 </div>
 
-    <div class="hobby-card">
+    <!-- <div class="hobby-card">
       <img src="https://cdn-icons-png.flaticon.com/512/4149/4149647.png">
       <h3>Learning New Technologies</h3>
-    </div>
+    </div> -->
 
-    <div class="hobby-card">
+    <!-- <div class="hobby-card">
       <img src="https://cdn-icons-png.flaticon.com/512/2621/2621303.png">
       <h3>Real-time Projects</h3>
-    </div>
+    </div> -->
 
     
   <div class="hobby-card">
@@ -126,56 +126,62 @@
     <div class="skills">
 
       <div class="progress">
-        <h3>HTML <span>95%</span></h3>
+        <h3>HTML <span>70%</span></h3>
         <div class="bar html"><span></span></div>
       </div>
 
       <div class="progress">
-        <h3>CSS <span>90%</span></h3>
+        <h3>CSS <span>70%</span></h3>
         <div class="bar css"><span></span></div>
       </div>
 
       <div class="progress">
-        <h3>Python <span>85%</span></h3>
+        <h3>Python <span>75%</span></h3>
         <div class="bar python"><span></span></div>
       </div>
 
       <div class="progress">
-        <h3>PostgreSQL <span>80%</span></h3>
+        <h3>PostgreSQL <span>60%</span></h3>
         <div class="bar sql"><span></span></div>
       </div>
 
       <div class="progress">
-        <h3>Problem Solving <span>95%</span></h3>
+        <h3>Problem Solving <span>75%</span></h3>
         <div class="bar ps"><span></span></div>
       </div>
 
       <div class="progress">
-        <h3>Team Work <span>99%</span></h3>
+        <h3>Team Work <span>80%</span></h3>
         <div class="bar team"><span></span></div>
       </div>
+
+      <div class="progress">
+        <h3>Communication <span>90%</span></h3>
+        <div class="bar comm"><span></span></div>
+      </div>
+
 
     </div>
 
     <!-- RIGHT : BOXES -->
     <div class="box-container">
       <div class="box">
-        <h3>>>3+</h3>
+        <h3>3+</h3>
         <p>Projects Completed</p>
       </div>
 
       <div class="box">
-        <h3>>>3+</h3>
+        <h3>3+</h3>
         <p>Awards</p>
       </div>
 
       <div class="box">
-        <h3>>>6+</h3>
+        <h3>6+</h3>
         <p>Skills</p>
       </div>
 
       <div class="box">
-        <h3>>>12th complete + Trainee at FSSA</h3>
+        <h3>12th complete + Trainee at FSSA</h3>
         <p> Educations</p>
       </div>
     </div>
@@ -225,7 +231,7 @@
 
 <!-- PROJECTS -->
 <section id="projects" class="section-py">
-  <h2>Projects</h2>
+  <h2 style="color: aliceblue;">Projects</h2>
 
   <div class="project-card">
     <h3>Kids Wear Website</h3>
