--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
       <div class="progress">
         <h3>Communication <span>90%</span></h3>
-        <div class="bar comm"><span></span></div>
+        <div class="bar com"><span></span></div>
       </div>
 
 
