--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 <!-- HOME --> 
 <section id="home" class="hero"> 
   <div class="my">
-  <h2>Hello Iam </h2>
+  <h2>Hello I'am </h2>
   <h1>Rajarajeshwari</h1>
   <button class="badge">Software Developer Trainee</button>
   <p class="paragraph"> I'm a Full Stack Developer and UI/UX Designer, <br>
-    currently training as a Software Developer at<br> Freshworks STS Software Academy
+    currently training as a Software Developer at<br> Freshworks STS Software Academy.
     I enjoy building complete web applications from design to backend.
   </p>
   <button class="bio"> <a href="#about">About me ✨</a>
@@ -184,7 +184,7 @@ I am passionate about building user-friendly and responsive web applications. I 
           <span class="skill-name">
             <i class="fa-solid fa-people-group team-icon"></i> Team Work
           </span>
-          <span>80%</span>
+          <span>90%</span>
         </h3>
         <div class="bar team"><span></span></div>
       </div>
@@ -205,7 +205,7 @@ I am passionate about building user-friendly and responsive web applications. I 
     <div class="box-container">
       <div class="box">
         <h3>3+</h3>
-        <p>Projects Completed</p>
+        <p >Projects Completed</p>
       </div>
 
       <div class="box">
@@ -219,8 +219,8 @@ I am passionate about building user-friendly and responsive web applications. I 
       </div>
 
       <div class="box">
-        <h3>Technology Focus</h3>
-        <p>Web Development</p>
+        <h3>2+</h3>
+        <p>Technology Focus</p>
       </div>
     </div>
 
@@ -243,8 +243,8 @@ I am passionate about building user-friendly and responsive web applications. I 
 
     <div class="project-content">
       <h3>Kids Wear Website</h3>
-      <p>Designed and built a static kids wear website with a clean and colorful UI.</p>
-      <small>HTML • CSS</small><br>
+      <p>Designed and built a static  website for kids wear with a clean and colorful UI.</p>
+      <small class="small">HTML • CSS</small><br>
       <a href="https://rajarajeshwari9344534-rgb.github.io/kids_wear/"
          target="_blank"
          rel="noopener noreferrer">
@@ -263,7 +263,7 @@ I am passionate about building user-friendly and responsive web applications. I 
     <div class="project-content">
       <h3>Website Wireframe Design</h3>
       <p>Created wireframes using Figma to plan layout, structure, and user flow.</p>
-      <small>Figma</small><br>
+      <small class="small">Figma</small><br>
       <a href="https://www.figma.com/design/HIMy34boMBiLjibnm2wibA/Wireframe?node-id=97-12&p=f"
          target="_blank"
          rel="noopener noreferrer">
@@ -282,7 +282,7 @@ I am passionate about building user-friendly and responsive web applications. I 
     <div class="project-content">
       <h3>Backend API System</h3>
       <p>Developed REST APIs with database integration and Swagger documentation.</p>
-      <small>Python • FastAPI • SQL</small><br>
+      <small class="small">Python • FastAPI • SQL</small><br>
       <a href="#"
          title="API runs on localhost">
         API (Localhost)
@@ -305,7 +305,7 @@ I am passionate about building user-friendly and responsive web applications. I 
       <p>
         A full-stack complaint management system for reporting and tracking dowry cases.
       </p>
-      <small>HTML • CSS • Python • FastAPI • PostgreSQL</small><br>
+      <small class="small">HTML • CSS • Python • FastAPI • PostgreSQL</small><br>
       <a href="https://rajarajeshwari9344534-rgb.github.io/Justice-Nest/index.html"
          target="_blank"
          rel="noopener noreferrer">
@@ -331,7 +331,7 @@ I am passionate about building user-friendly and responsive web applications. I 
     </p>
 
    
-    <small>
+    <small class="small">
       Team Collaboration • Communication 
     </small><br>
 
@@ -351,18 +351,18 @@ I am passionate about building user-friendly and responsive web applications. I 
     <h3>Thug Warriors – Life Skill & Business Project</h3>
 
 <p>
-  A 6-member team project focused on designing a product to solve real-world
-  problems through effective planning and collaboration.
+  A 6-member team project focused on developing a Gas Leakage Detector solution
+  to improve safety.
 </p>
 
 <p>
-  Covered product development, pricing, advertising, and marketing strategies.
+  The project covered basic product design, pricing, and marketing strategies.
 </p>
 
 
    
 
-    <small>
+    <small class="small">
       Teamwork • Problem Solving • Product Planning • Marketing Strategy
     </small><br>
 
@@ -395,17 +395,12 @@ I am passionate about building user-friendly and responsive web applications. I 
 
     <!-- Essay Writing -->
     <div class="achievement-card">
-      <img src="./assets/ChatGPT Image Jan 7, 2026, 10_07_56 AM.png" alt="Essay Writing">
+      <img src="./assets/tv.jpg" alt="Essay Writing">
       <h3>District Level Essay Writing</h3>
       <p>Runner-up – 12th Grade</p>
     </div>
 
-    <!-- Kho-Kho -->
-    <div class="achievement-card">
-      <img src="./assets/sports-placeholder.png" alt="Kho-Kho">
-      <h3>Kho-Kho Player</h3>
-      <p>Runner-up</p>
-    </div>
+  
 
     <!-- Squad Lead -->
     <div class="achievement-card">
@@ -415,10 +410,17 @@ I am passionate about building user-friendly and responsive web applications. I 
     </div>
 
 
+    <div class="achievement-card">
+      <img src="./assets/school.jpg" alt="Essay">
+      <h3>School Level Essay Writing</h3>
+      <p>Secured 1st Place</p>
+    </div>
+
+
     
     <div class="achievement-card">
       <img src="./assets/product.jpg" alt="Best Squad Lead">
-        <h3>Product Building Challenge</h3>
+        <h3>Product Building Challenge(Gas leakage Detector)</h3>
       <p>Secured 2nd place</p>
     </div>
 
